--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ header img {
   padding: 2vw;
 }
 .topper-container .top {
-  height: 35vw;
+  height: 45vw;
   width: 72%;
   display: flex;
   flex-direction: column;
@@ -253,13 +253,13 @@ header img {
   font-weight: 600;
 }
 .info .name {
-  text-wrap: nowrap;
+  /* text-wrap: nowrap; */
 }
 .info .beans-container {
   margin-top: 0.5vw;
   display: flex;
   gap: 1vw;
-  font-size: 2.1vw;
+  font-size: 2.5vw;
 }
 .info .beans-container .bean-img {
   max-width: 3vw;
